<resources>
    <string name="app_name">Playlist Maker </string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="email">Rogachev-64@mail.ru</string>
    <string name="support_topic">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="support_text">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="yandex_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="praktikum">https://practicum.yandex.ru</string>
    <string name="something_went_wrong">Проблемы со связью</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="no_connection_text">Проблемы со связью\n\n Загрузка не удалась.Проверьте подключение к интернету</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="trackTimes">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="zero_time">Нулевое время</string>
    <string name="live_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="media_library_empty">Ваша медиатека пуста</string>
    <string name="play_list_empty">Вы не создали ни одного плейлиста</string>
    <string name="new_play_list">Новый плейлист</string>
</resources>