<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MyBackGroudSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="4dp">

        <Button
            android:id="@+id/buttonBack"
            style="@style/ButtonSettings"
            android:layout_width="@dimen/button_w"
            android:layout_height="@dimen/button_h"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:padding="12dp"
            app:icon="@drawable/ic_back"
            app:iconGravity="textStart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/end_margin"
            android:fontFamily="@font/ys_display_medium"
            android:padding="6dp"
            android:text="@string/search"
            android:textAppearance="@style/style_2"
            android:textFontWeight="500" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/search_background"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:saveEnabled="false"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/ClearIconSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:paddingStart="8dp"
            android:paddingTop="6dp"
            android:paddingEnd="8dp"
            android:paddingBottom="6dp"
            android:src="@drawable/search_close_ic"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/nothing_found_search_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_message_error"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            style="@style/nothingFoundInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            style="@style/Error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/nothing_found" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_connect_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_message_error"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            style="@style/nothingFoundInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            style="@style/Error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:gravity="center"
            android:text="@string/no_connection_text" />

        <Button
            android:id="@+id/search_refresh"
            style="@style/RefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top_refresh"
            android:text="@string/refresh"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/corner_radius_refresh" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchHistoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="42dp"
            android:text="@string/you_search"
            android:textAppearance="@style/style_4" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTracksHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="8"
            tools:listitem="@layout/item_search_layout"/>

        <Button
            android:id="@+id/clearHistoryButton"
            style="@style/HistorySearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/clear_history"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/corner_radius_refresh" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_search_layout"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminateTint="@color/blue"
        android:indeterminate="true"
        android:visibility="gone"/>

</LinearLayout>
